# Stock_Analysis_Toolkit

./: .gitignore  Key note.txt  Main.py  Main2.py  README.md  TEST.py  clean_up.sh  pyproject.toml  requirements.txt  scrapper_app.py  ticker_screener.py
Scrappers/: Main.py  ScrapperApp.py
Scrappers/Important_Stats/: YF_Important_3s.py
Scrappers/YF_Core/: YF_Statement.py  YF_Statistics.py  YF_Summary.py
Scrappers/yf_core/: YFStatement.py  YFStatistics.py  YFSummary.py
Scrappers2/Core/: ScrapperAbstract.py  YFStatistics.py
scrappers/: __init__.py  scrapper_app.py
scrappers/config/: application_configurations.json  application_logic.json
scrappers/core/: scrapper_abstract.py  yf_statement.py  yf_statistics.py  yf_summary.py
scrappers/core/analysis/: cagr.py  growth_analysis.py  proportion.py
scrappers/important_stats/: yf_important_stat.py
scrappers/utils/: config_reader.py  data_writer.py  decor.py  logger.py  multi_threader.py  system_spec.py
scrappers/web/: portfolio_analyzer.py  ticker_screener.py  yf_web_abstract.py
scrappers/yf_core/: yf_statement.py  yf_summary.py
scrappers2/: scrapper_app.py
scrappers2/config/: application_logic.json
scrappers2/core/: scrapper_abstract.py  yf_statement.py  yf_statistics.py  yf_summary.py
scrappers2/core/analysis/: cagr.py
scrappers2/utils/: config_reader.py  data_writer.py  logger.py  system_spec.py
tests/utils/: logger_test.py  multi_threader_test.py  system_spec_test.py
