[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Stock_Analysis_Toolkit"
dependencies = [
  "requests>=2.0",
  "beautifulsoup4==4.12.2",
  "pandas==2.1.4",
  "numpy==1.26.2",
  "scipy==1.11.4",
  "lazy-scrapper @ git+ssh://git@github.com/Frankie-Tu/Lazy-Scrapper"
]
dynamic = ["version"]